--- a/package.json
+++ b/package.json
@@ -2,5 +2,29 @@
   "dependencies": {
     "i": "^0.3.7",
     "inquirer": "^9.0.0"
+  },
+  "name": "teamprofilegenerator",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivetteramos/TeamProfileGenerator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ivetteramos/TeamProfileGenerator/issues"
+  },
+  "homepage": "https://github.com/ivetteramos/TeamProfileGenerator#readme",
+  "devDependencies": {
+    "jest": "^28.1.2"
   }
 }
