--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^28.1.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/ivetteramos/TeamProfileGenerator/issues"
   },
-  "homepage": "https://github.com/ivetteramos/TeamProfileGenerator#readme"
+  "homepage": "https://github.com/ivetteramos/TeamProfileGenerator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
